    (API) Added com.gmail.nossr50.mcMMO.getUserBlockTracker
    (API) Added com.gmail.nossr50.mcMMO.getChunkManager
    (API) Added new methods to com.gmail.nossr50.util.blockmeta.UserBlockTracker for easier readability
    (API) Deprecated many poorly named methods in UserBlockTracker (see notes)
    (Codebase) Cleaned up and organized unit tests relating to UserBlockTracker

    NOTES:
    Not planning to delete the deprecated methods in UserBlockTracker anytime soon, as nothing has really changed other than the names

Version 2.2.012
    Fixed a bug where Daze would cause an exception in older game versions (1.20.4 and older)

Version 2.2.011
    Fixed bug where some potions on older versions (1.20.4 and older) were not brewable (night vision extended, etc)
    Improved logging for Alchemy potion look up (see notes)

NOTES:
    Added detailed logging when multiple configured potions match an ItemStack.
    This will help identify issues with potion configuration.

Version 2.2.010
    Fixed being unable to load REGEN potion type on new versions of Paper/Spigot 1.20.6
    Fixed some potions not gaining XP when brewed (Level 2 potions, etc)
    BrewingStands will now remember who owns them, this persists across restarts (see notes)
    Fixed rare NPE in mcMMO events when player data was unable to be retrieved
    Fixed a NPE that could happen when damaging armor with Axes
    Fixed a bug where Alchemy brewing would be cancelled if the player died
    (API) Added getMcMMOPlayer() to McMMOPlayerSkillEvent
    (API) Added new ctor McMMOPlayerSkillEvent(@NotNull McMMOPlayer mmoPlayer, @NotNull PrimarySkillType primarySkillType)
    (API) Deprecated ctor McMMOPlayerSkillEvent(org.bukkit.entity.Player, com.gmail.nossr50.datatypes.skills.PrimarySkillType)
    (API) Added ctor McMMOPlayerAbilityEvent(com.gmail.nossr50.datatypes.player.McMMOPlayer, com.gmail.nossr50.datatypes.skills.PrimarySkillType)